fixed typos in config file

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3634,7 +3634,7 @@ valentínusardagur
 # Unable to include: félags- og barnamálaráðherra, fjármála- og efnahagsráðherra, utanríkis- og þróunarsamvinnuráðherra, utanríkis- og þróunarsamvinnuráðherra, umhverfis- og auðlindaráðherra, sjávarútvegs- og landbúnaðarráðherra, mennta- og menningarmálaráðherra, samgöngu- og sveitarstjórnarráðherra, ferðamála-, iðnaðar- og nýsköpunarráðherra, sérstakur saksóknari, sr., hr.
 
 Ráðherra
-Dómsmálsráðherra
+Dómsmálaráðherra
 Félagsmálaráðherra
 Barnamálaráðherra
 Fjármálaráðherra
@@ -3706,7 +3706,6 @@ Viðskiptafræði
 
 # Committees, departments, etc.
 
-Óbyggðanefd
 Skemmtinefnd
 Öryggisráð
 Sambandsráð
