added to list of countries and related adjectives

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3777,9 +3777,105 @@ kanada
 kanadamaður
 Kanadískur
 spánn
+spánverji
 Spænskur
 japan
+japani
 Japanskur
+arabía
+arabi
+Arabískur
+filippseyjar
+filippseyingur
+Filippseyskur
+ástralía
+ástrali
+Ástralskur
+ísrael
+ísraeli
+Ísraelskur
+belgía
+# belgi 	#mynd af sögninni 'belgja'
+Belgískur
+ítalía
+ítali
+Ítalskur
+írland
+íri
+Írskur
+skotland
+# skoti
+Skoskur
+portúgal
+portúgali
+Portúgalskur
+sviss
+svisslendingur
+Svissneskur
+austurríki
+austurríkismaður
+Austurrískur
+grikkland
+# grikki
+Grískur
+pólland
+póllendingur
+Pólskur
+tékkland
+# tékki
+Tékkneskur
+tyrkland
+tyrki
+Tyrkneskur
+króatía
+króati
+Króatískur
+ungverjaland
+ungverji
+Ungverskur
+slóvakía
+slóvaki
+Slóvakískur
+mexíkó
+mexíkói
+Mexíkóskur
+argentína
+argentínumaður
+Argentínskur
+brasilía
+brasilíumaður
+Brasilískur
+indland
+indverji
+Indverskur
+taíland
+taílendingur
+Taílenskur
+pakistan
+pakistani
+Pakistanskur
+víetnam
+víetnami
+Víetnamskur
+mongólía
+mongólíumaður
+Mongólskur
+indónesía
+indónesi
+Indónesískur
+kórea
+kóreumaður
+Kóreskur
+norður-kórea 		#verður að Norður-kórea
+norður-kóreumaður	#verður að Norður-kóreumaður
+Norðurkóreskur
+suður-kórea 		#verður að Suður-kórea
+suður-kóreumaður	#ekki leiðrétt - fellur undir 'if all(m.stofn not in stems for m in meanings)'
+Suðurkóreskur
+nýja-sjáland 		#ekki leiðrétt - fellur undir 'if lower and any(m.ordfl not in {"kk", "kvk", "hk"} for m in tval)' því BÍN segir að þetta geti líka verið sögn?
+nýsjálendingur
+Nýsjálenskur
+
 
 # Language families
 # Unable to include: afróasískur, aímarískur, algískur, altískur, ástró-asískur, ástronesískur, dravidískur, dravídamál, eskimó-aleútískur, karíbamál, nígerkongómál, nílósaharamál, sinó-tíbetskur, suðurkákasískur, túpímál
