more words added to config file

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3579,6 +3579,12 @@ Sjíti
 Súnníti
 evrópa
 sjálfstæðismaður
+samfylkingarmaður
+framsóknarmaður
+miðflokksmaður
+pírati
+repúblikani
+demókrati
 Lenínismi
 Marxismi
 Darwinismi
@@ -3870,7 +3876,7 @@ norður-kórea 		#verður að Norður-kórea
 norður-kóreumaður	#verður að Norður-kóreumaður
 Norðurkóreskur
 suður-kórea 		#verður að Suður-kórea
-suður-kóreumaður	#ekki leiðrétt - fellur undir 'if all(m.stofn not in stems for m in meanings)'
+suður-kóreumaður	#ekki leiðrétt - fellur undir 'if all(m.stofn not in stems for m in meanings)' því orðið finnst ekki í meanings
 Suðurkóreskur
 nýja-sjáland 		#ekki leiðrétt - fellur undir 'if lower and any(m.ordfl not in {"kk", "kvk", "hk"} for m in tval)' því BÍN segir að þetta geti líka verið sögn?
 nýsjálendingur
