added countries and nationalities to config file

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3598,6 +3598,8 @@ Kreppa
 Endurreisn
 Jörð
 Tungl
+vesturlönd
+norðurlönd
 
 # Holidays
 # Unnecessary to include: föstudagurinn langi
@@ -3881,7 +3883,28 @@ Suðurkóreskur
 nýja-sjáland 		#ekki leiðrétt - fellur undir 'if lower and any(m.ordfl not in {"kk", "kvk", "hk"} for m in tval)' því BÍN segir að þetta geti líka verið sögn?
 nýsjálendingur
 Nýsjálenskur
+suður-afríka 		#verður að Suður-afríka
+suður-afríkumaður 	#verður að Suður-afríkumaður
+Suðurafrískur
 
+austfirðir
+austurland
+norðurland
+norðausturland
+# norðurland eystra
+norðvesturland
+# norðurland vestra
+suðausturland
+suðvesturland
+suðurland
+suðurnes
+vestfirðir
+vesturland
+norðlendingur
+austfirðingur
+sunnlendingut
+suðurnesjamaður
+vestfirðingur
 
 # Language families
 # Unable to include: afróasískur, aímarískur, algískur, altískur, ástró-asískur, ástronesískur, dravidískur, dravídamál, eskimó-aleútískur, karíbamál, nígerkongómál, nílósaharamál, sinó-tíbetskur, suðurkákasískur, túpímál
