added to capitalized/non-capitalized words

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3583,8 +3583,6 @@ samfylkingarmaður
 framsóknarmaður
 miðflokksmaður
 pírati
-repúblikani
-demókrati
 Lenínismi
 Marxismi
 Darwinismi
@@ -3600,6 +3598,7 @@ Jörð
 Tungl
 vesturlönd
 norðurlönd
+óskarsverðlaun 	#ekki leiðrétt, fer í 'if all(m.stofn not in stems for m in meanings)' en meanings = []
 
 # Holidays
 # Unnecessary to include: föstudagurinn langi
@@ -3886,14 +3885,24 @@ Nýsjálenskur
 suður-afríka 		#verður að Suður-afríka
 suður-afríkumaður 	#verður að Suður-afríkumaður
 Suðurafrískur
+kasakstan
+kasaki
+Kasakskur
+sómalía
+sómali
+Sómalískur
+suðurskautsland
+róm
+rómverji
+Rómverskur
+germani
+Germanskur
 
 austfirðir
 austurland
 norðurland
 norðausturland
-# norðurland eystra
 norðvesturland
-# norðurland vestra
 suðausturland
 suðvesturland
 suðurland
@@ -3905,6 +3914,12 @@ austfirðingur
 sunnlendingut
 suðurnesjamaður
 vestfirðingur
+
+norðvesturkjördæmi
+norðausturkjördæmi
+suðurkjördæmi
+suðvesturkjördæmi
+reykjavíkurkjördæmi
 
 # Language families
 # Unable to include: afróasískur, aímarískur, algískur, altískur, ástró-asískur, ástronesískur, dravidískur, dravídamál, eskimó-aleútískur, karíbamál, nígerkongómál, nílósaharamál, sinó-tíbetskur, suðurkákasískur, túpímál
