Fixed bugs in capitalization checks; support for compound words

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3640,6 +3640,10 @@ kanada
 kanadamaður
 Kanadískur
 
+Félags- og barnamálaráðherra
+Umhverfis- og auðlindaráðherra
+Fjármálaráðherra
+Fjármála- og efnahagsráðherra
 
 [taboo_words]
 
