Better support for capitalization errors

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3638,7 +3638,6 @@ valentínusardagur
 þorláksmessa
 
 # Job titles
-# Unable to include: félags- og barnamálaráðherra, fjármála- og efnahagsráðherra, utanríkis- og þróunarsamvinnuráðherra, utanríkis- og þróunarsamvinnuráðherra, umhverfis- og auðlindaráðherra, sjávarútvegs- og landbúnaðarráðherra, mennta- og menningarmálaráðherra, samgöngu- og sveitarstjórnarráðherra, ferðamála-, iðnaðar- og nýsköpunarráðherra, sérstakur saksóknari, sr., hr.
 
 Ráðherra
 Dómsmálaráðherra
@@ -3656,6 +3655,15 @@ Menningarmálaráðherra
 Samgönguráðherra
 Sveitarstjórnarráðherra
 Heilbrigðisráðherra
+Félags- og barnamálaráðherra
+Umhverfis- og auðlindaráðherra
+Fjármála- og efnahagsráðherra
+Utanríkis- og þróunarsamvinnuráðherra
+Sjávarútvegs- og landbúnaðarráðherra
+Mennta- og menningarmálaráðherra
+Samgöngu- og sveitarstjórnarráðherra
+Ferðamála-, iðnaðar- og nýsköpunarráðherra
+
 Forseti
 Saksóknari
 Ríkissaksóknari
@@ -3873,17 +3881,17 @@ Indónesískur
 kórea
 kóreumaður
 Kóreskur
-norður-kórea 		#verður að Norður-kórea
-norður-kóreumaður	#verður að Norður-kóreumaður
+#norður-kórea 		#verður að Norður-kórea
+#norður-kóreumaður	#verður að Norður-kóreumaður
 Norðurkóreskur
-suður-kórea 		#verður að Suður-kórea
-suður-kóreumaður	#ekki leiðrétt - fellur undir 'if all(m.stofn not in stems for m in meanings)' því orðið finnst ekki í meanings
+#suður-kórea 		#verður að Suður-kórea
+#suður-kóreumaður	#ekki leiðrétt - fellur undir 'if all(m.stofn not in stems for m in meanings)' því orðið finnst ekki í meanings
 Suðurkóreskur
-nýja-sjáland 		#ekki leiðrétt - fellur undir 'if lower and any(m.ordfl not in {"kk", "kvk", "hk"} for m in tval)' því BÍN segir að þetta geti líka verið sögn?
+#nýja-sjáland 		#ekki leiðrétt - fellur undir 'if lower and any(m.ordfl not in {"kk", "kvk", "hk"} for m in tval)' því BÍN segir að þetta geti líka verið sögn?
 nýsjálendingur
 Nýsjálenskur
-suður-afríka 		#verður að Suður-afríka
-suður-afríkumaður 	#verður að Suður-afríkumaður
+#suður-afríka 		#verður að Suður-afríka
+#suður-afríkumaður 	#verður að Suður-afríkumaður
 Suðurafrískur
 kasakstan
 kasaki
@@ -3911,7 +3919,7 @@ vestfirðir
 vesturland
 norðlendingur
 austfirðingur
-sunnlendingut
+sunnlendingur
 suðurnesjamaður
 vestfirðingur
 
@@ -3922,7 +3930,9 @@ suðvesturkjördæmi
 reykjavíkurkjördæmi
 
 # Language families
-# Unable to include: afróasískur, aímarískur, algískur, altískur, ástró-asískur, ástronesískur, dravidískur, dravídamál, eskimó-aleútískur, karíbamál, nígerkongómál, nílósaharamál, sinó-tíbetskur, suðurkákasískur, túpímál
+# Unable to include: afróasískur, aímarískur, algískur, altískur, ástró-asískur,
+# ástronesískur, dravidískur, dravídamál, eskimó-aleútískur, karíbamál, nígerkongómál,
+# nílósaharamál, sinó-tíbetskur, suðurkákasískur, túpímál
 
 Indóevrópskur
 Semískur
@@ -4025,7 +4035,7 @@ Gorgonsólaostur
 # Grahams-mjöl
 Hamborgari
 Hólsfjallahangikjöt
-Jaffaappelsínur
+Jaffaappelsína
 Jalapenjo
 Jövukaffi
 Kalamataólífur
@@ -4058,7 +4068,7 @@ Vínarterta
 # Worcester-sósa
 
 # Medical terms
-Akureyrarveikin
+Akureyrarveiki
 Alzheimers
 # Alzheimers-sjúkdómur
 Asíuflensa
@@ -4067,21 +4077,21 @@ Downs
 Fuglaflensa
 Hermannaveiki
 Inflúensa
-Langerhanseyjar
+Langerhanseyja
 Liðagigt
 Parkinsonsveiki
 Stokkhólmsheilkenni
 Sóríasis
 
 # Religious terms (some have already been listed)
-Ágústínar
+# Ágústíni
 Ásatrú
 Ásatrúarmaður
-Benediktínar
+# Benediktíni
 Búddismi
 Dadaismi
 Frjálshyggja
-Fransiskanar
+# Fransiskani
 Guðspekingur
 Húgenotti
 Jafnaðarstefna
@@ -4123,7 +4133,7 @@ Evuklæði
 Gordíonshnútur
 Grettistak
 Gróusaga
-Gvendarbrunnur
+# Gvendarbrunnur  # !!! Þetta hlýtur að teljast örnefni, og er merkt þannig í BÍN?
 Hrunadans
 Kaupahéðinn
 Kínaskór
@@ -4137,11 +4147,6 @@ Svikahrappur
 Þórðargleði
 Þyrnirósarsvefn
 Ökuþór
-
-Félags- og barnamálaráðherra
-Umhverfis- og auðlindaráðherra
-Fjármálaráðherra
-Fjármála- og efnahagsráðherra
 
 [taboo_words]
 
