Fixed bugs in capitalization logic

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -26,9 +26,11 @@
 #      TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
 #      SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
+
 [settings]
 
 # DEBUG = true
+
 
 [unique_errors]
 
@@ -2714,6 +2716,7 @@
 "þyrfi", "þyrfti"
 "Þýslalandi", "Þýskalandi"
 
+
 [allowed_multiples]
 
 # Set of word forms that are allowed to appear consecutively in text
@@ -3478,7 +3481,6 @@ víð átta
 þrí buri
 þrí tugur
 
-
 # Split into 3 words
 #heils dags starf
 #heils árs vegur
@@ -3486,6 +3488,7 @@ víð átta
 #marg um talaður
 #sama sem merki
 #því um líkt
+
 
 [morphemes]
 
@@ -3881,17 +3884,17 @@ Indónesískur
 kórea
 kóreumaður
 Kóreskur
-#norður-kórea 		#verður að Norður-kórea
-#norður-kóreumaður	#verður að Norður-kóreumaður
+norður-kórea 		#verður að Norður-kórea
+norður-kóreumaður	#verður að Norður-kóreumaður
 Norðurkóreskur
-#suður-kórea 		#verður að Suður-kórea
-#suður-kóreumaður	#ekki leiðrétt - fellur undir 'if all(m.stofn not in stems for m in meanings)' því orðið finnst ekki í meanings
+suður-kórea 		#verður að Suður-kórea
+suður-kóreumaður	#ekki leiðrétt - fellur undir 'if all(m.stofn not in stems for m in meanings)' því orðið finnst ekki í meanings
 Suðurkóreskur
-#nýja-sjáland 		#ekki leiðrétt - fellur undir 'if lower and any(m.ordfl not in {"kk", "kvk", "hk"} for m in tval)' því BÍN segir að þetta geti líka verið sögn?
+nýja-sjáland 		#ekki leiðrétt - fellur undir 'if lower and any(m.ordfl not in {"kk", "kvk", "hk"} for m in tval)' því BÍN segir að þetta geti líka verið sögn?
 nýsjálendingur
 Nýsjálenskur
-#suður-afríka 		#verður að Suður-afríka
-#suður-afríkumaður 	#verður að Suður-afríkumaður
+suður-afríka 		#verður að Suður-afríka
+suður-afríkumaður 	#verður að Suður-afríkumaður
 Suðurafrískur
 kasakstan
 kasaki
@@ -4148,6 +4151,7 @@ Svikahrappur
 Þyrnirósarsvefn
 Ökuþór
 
+
 [taboo_words]
 
 # Taboo or inappropriate words,
@@ -4227,6 +4231,8 @@ að verulegu leiti              	$error(YI, að verulegu leyti)
 að talsverðu leiti             	$error(YI, að talsverðu leyti)
 að öllu leiti               	$error(YI, að öllu leyti)
 að ýmsu leiti               	$error(YI, að ýmsu leyti)
+fyrir mitt leiti               	$error(YI, fyrir mitt leyti)
+fyrir okkar leiti               $error(YI, fyrir okkar leyti)
 að sjálfsdáðum              	$error(AÐAF, af sjálfsdáðum)
 að ásettu ráði              	$error(AÐAF, af ásettu ráði)
 að öllu afli                	$error(AÐAF, af öllu afli)
@@ -4239,6 +4245,9 @@ burtséð frá                 	$error(WRONG_PHRASE, að undanskildu)  # eða á
 bæn sýna uppfyllta				$error(YI, bæn sína uppfyllta)
 drauma sýna rætast				$error(YI, drauma sína rætast)
 eiga þakkir skilið          	$error(WRONG_FORM, eiga þakkir skildar) # (mælt með)
+á þakkir skilið          	    $error(WRONG_FORM, á þakkir skildar) # (mælt með)
+átti þakkir skilið        	    $error(WRONG_FORM, átti þakkir skildar) # (mælt með)
+átt þakkir skilið        	    $error(WRONG_FORM, átt þakkir skildar) # (mælt með)
 eina ferðina en					$error(N, eina ferðina enn)
 eins og helt sé úr fötu			$error(WRONG_WORD, eins og hellt sé úr fötu)
 eitthvað að viti            	$error(AÐAF, eitthvað af viti)
@@ -4261,17 +4270,20 @@ fríður sínum					$error(YI, fríður sýnum)
 fótum sýnum forráð				$error(YI, fótum sínum forráð)
 gefur að líta               	$error(WRONG_WORD, getur að líta)
 hann vil                    	$error(WRONG_PERSON, hann vill)
+hún vil                    	    $error(WRONG_PERSON, hún vill)
+það vil                    	    $error(WRONG_PERSON, það vill)
 hegndi bakara fyrir smið		$error(TRANSPOSITION, hengdi bakara fyrir smið)
 helltist úr lestinni			$error(WRONG_WORD, heltist úr lestinni)
 helti olíu á eldinn				$error(WRONG_WORD, hellti olíu á eldinn)
+helt olíu á eldinn				$error(WRONG_WORD, hellt olíu á eldinn)
 helti úr skálum reiði			$error(WRONG_WORD, hellti úr skálum reiði)
+helt úr skálum reiði			$error(WRONG_WORD, hellt úr skálum reiði)
 himininn byrgist				$error(WRONG_CASE, himinninn byrgist)
 himinn höndum tekið				$error(WRONG_CASE, himin höndum tekið)
 himinninn heiðir				$error(WRONG_CASE, himininn heiðir)
 hreint fyrir sýnum dyrum		$error(YI, hreint fyrir sínum dyrum)
 hvað á þetta að þíða			$error(YI, hvað á þetta að þýða)
 hvaðanæva að af landinu     	$error(REDUNDANT_WORD, hvaðanæva af landinu)
-hún vil                     	$error(WRONG_PERSON, hún vill)
 kom að fjöllum                  $error(AÐAF, kom af fjöllum)
 komst að fjöllum                $error(AÐAF, komst af fjöllum)
 komu að fjöllum                 $error(AÐAF, komu af fjöllum)
@@ -4349,6 +4361,7 @@ skyldi ekki baun				$error(YI, skildi ekki baun)
 skyldi ekki bofs				$error(YI, skildi ekki bofs)
 skyldi ekki neitt				$error(YI, skildi ekki neitt)
 skyldi fyrr en skall í tönnum	$error(YI, skildi fyrr en skall í tönnum)
+skyldi ekki fyrr en skall í tönnum	$error(YI, skildi ekki fyrr en skall í tönnum)
 skyn og skúrir					$error(YI, skin og skúrir)
 sér og sýnum					$error(YI, sér og sínum)
 sýna hentisemi					$error(YI, sína hentisemi)
@@ -4390,7 +4403,6 @@ við líði                    	$error(YI, við lýði)
 öll sömul						$error(WRONG_WORD, öllsömul)
 öll sömun						$error(WRONG_WORD, öllsömul)
 þar til yfir líkur				$error(YI, þar til yfir lýkur)
-það vil                     	$error(WRONG_PERSON, það vill)
 þessi aðilar                    $error(WRONG_FORM, þessir aðilar)
 þíðir ekkert að					$error(YI, þýðir ekkert að)
 þýða í ísinn					$error(YI, þíða í ísinn)
