Additions to taboo word handling and settings.py

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -4154,22 +4154,7 @@ Svikahrappur
 
 [taboo_words]
 
-# Taboo or inappropriate words,
-# should not be used in formal text
-
-pussa				píka_kvk
-tussa				píka_kvk
-kunta				píka_kvk
-tilli				limur_kk
-hommatittur			hommi_kk
-faggi				hommi_kk
-lessa				lesbía_kvk
-negri				blökkumaður_kk
-surtur				blökkumaður_kk
-blámaður			blökkumaður_kk
-júði				gyðingur_kk
-múhameðstrú			íslam_hk
-múhameðstrúarmaður	múslími_kk
+$include TabooWords.conf
 
 
 [suggestions]
