Add GitHub Action for testing; tests; TabooWords.conf

--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -13,6 +13,7 @@ hommatittur_kk			hommi_kk
 faggi_kk				hommi_kk
 lessa_kvk				lesbía_kvk
 negri_kk				blökkumaður_kk
+halanegri_kk			blökkumaður_kk
 surtur_kk				blökkumaður_kk
 blámaður_kk			    blökkumaður_kk
 júði_kk				    gyðingur_kk         "Sá sem aðhyllist \
