--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Type check with mypy
       run: |
         if [ "${{ matrix.python-version }}" == "3.6" ]; then python -m pip install mypy; fi
-        if [ "${{ matrix.python-version }}" == "3.6" ]; then mypy --python-version=3.6 src/reynir-correct; fi
+        if [ "${{ matrix.python-version }}" == "3.6" ]; then mypy --python-version=3.6 src/reynir_correct; fi
     - name: Test with pytest
       run: |
         python -m pip install pytest
