Origin and suggest added to Annotation

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -3496,7 +3496,7 @@ víð átta
 # Flag shows if they should be the first or last part of a word
 # and which PoS they can attach to (+) and which are forbidden (-).
 
-afar        +kk +kvk +hk -lo +so -ao    # Attached to nouns and verbs, free with adj. and adv.
+#afar        +kk +kvk +hk -lo +so -ao    # Attached to nouns and verbs, free with adj. and adv.
 afbragðs	+kk +kvk +hk +lo
 afburða		+kk +kvk +hk +lo
 al			+kk +kvk +hk +lo
@@ -3524,7 +3524,7 @@ gjör		+lo +so 					# Can attach to nouns, but uncommon.
 hund		+lo
 hálf		+kk +kvk +hk +lo +so
 hámarks		+kk +kvk +hk
-jafn		+kk +kvk +hk +lo +so
+#jafn		+kk +kvk +hk +lo +so
 lang		+kk +kvk +hk +lo +so +ao	# Common with adj. and adv. in est. - langfallegastur
 langtíma	+kk +kvk +hk
 lágmarks	+kk +kvk +hk
@@ -3534,7 +3534,7 @@ megin		+kk +kvk +hk
 mis			+kk +kvk +hk +lo +so
 miðlungs	+kk +kvk +hk +lo
 næst		+lo							# Most common with adj. in est. - næstbestur
-ný			+kk -kvk -hk +lo +so		# TODO Any reason to exclude kk?
+#ný			-kk -kvk -hk +lo +so		
 of          +kk +kvk +hk -lo +so -ao    # Attached to nouns and verbs, free with adj. and adv.
 ofur        +kk +kvk +hk +lo +so +ao    # Attached to nouns and verbs, free with adj. and adv. but seems to have changed - ofursvalur
 ramm		+lo +ao
@@ -3549,7 +3549,7 @@ uppáhalds	+kk +kvk +hk
 van         +kk +kvk +hk +lo +so
 vara		+kk +kvk +hk
 # vel		+kk +kvk +hk -lo +so -ao	# TODO Too common as an independent word.
-ágætis		+kk +kvk +hk
+#ágætis		+kk +kvk +hk
 ó			+kk +kvk +hk +lo +so
 óhemju		+lo +so
 óskapa		+kk +kvk +hk
@@ -3561,6 +3561,7 @@ vara		+kk +kvk +hk
 
 # Common errors in capitalization
 # Note: this list can only include nouns and adjectives
+# All entries must be the error version
 
 Aríi
 Búddisti
