Devset data added

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -1543,7 +1543,7 @@
 "meigi", "megi"
 "meirihlutan", "meirihlutann"
 "meirilhuta", "meirihlutann"
-"Meistaradeildinnar", "Meistaradeildarinnar"
+"Meistaradeildinnar", "meistaradeildarinnar"
 "Meistaramánuðar", "Meistaramánaðar"
 "meistaranir", "meistararnir"
 "meistaratitlinn", "meistaratititilinn"
@@ -3480,6 +3480,69 @@ víð átta
 þre menningur
 þrí buri
 þrí tugur
+eitt leytið
+tvö leytið
+þrjú leytið
+fjögur leytið
+fimm leytið
+sex leytið
+sjö leytið
+átta leytið
+níu leytið
+tíu leytið
+ellefu leytið
+tólf leytið
+apríl mánuður
+burt séð
+dags daglega
+desember mánuður
+diskó tónlist
+febrúar mánuður
+fullorðins ár
+fyrra málið
+fésbókar síða
+fönk tónlist
+grunn einkenni
+grunn hugmynd
+#hipp hopp
+hægri stjórn
+hörku leikur
+innanlands mál
+janúar mánuður
+júlí mánuður
+júní mánuður
+kántrí lag
+ljós brúnn
+ljós gylltur
+loka dómur
+loka stig
+loka ár
+lykil þáttur
+lífsgæða kapphlaup
+mars mánuður
+maí mánuður
+meiri hluti
+minni hluti
+nóvember mánuður
+októver mánuður
+popp lag
+popp tónlist
+ramadan mánuður
+reggí tónlist
+rétttrúnaðar kirkja
+september mánuður
+sextugs aldur
+síðar nefndur
+sóló plata
+teflon panna
+tölvuleika tónlist
+vinstri stjórn
+ágúst mánuður
+ónota tilfinning
+ónæmis frumur
+ónæmis virkni
+óska andstæðingur
+
 
 # Split into 3 words
 #heils dags starf
@@ -3496,7 +3559,7 @@ víð átta
 # Flag shows if they should be the first or last part of a word
 # and which PoS they can attach to (+) and which are forbidden (-).
 
-#afar        +kk +kvk +hk -lo +so -ao    # Attached to nouns and verbs, free with adj. and adv.
+#afar       +kk +kvk +hk -lo +so -ao    Attached to nouns and verbs, free with adj. and adv.
 afbragðs	+kk +kvk +hk +lo
 afburða		+kk +kvk +hk +lo
 al			+kk +kvk +hk +lo
@@ -3504,7 +3567,7 @@ all         +lo +ao                     # Attached to adj. and adv.
 allsherjar  +kk +kvk +hk
 alþjóða     +kk +kvk +hk                # With exceptions; Alþjóða póstmálastofnunin etc.
 and         +kk +kvk +hk +lo +so +ao
-# auka		+kk +kvk +hk				# Common verb
+# auka		+kk +kvk +hk				Common verb
 auð			+kk +kvk +hk +lo +so
 aðal        +kk +kvk +hk
 einka		+kk +kvk +hk
@@ -3515,15 +3578,16 @@ fjöl		+kk +kvk +hk +lo +so
 for			+kk +kvk +hk +lo +so
 forkunnar   +kk +kvk +hk +lo +ao
 frum        +kk +kvk +hk +lo +so +ao
-# full		+kk +kvk +hk +lo +so +ao
-full		+lo +so                     # Removed +kk, +kvk and +hk cf. 'full ástæða', 'full réttindi', 'full eldmóðs'; removed +ao cf. 'full af'
+#full		+lo +so                     Removed +kk, +kvk and +hk cf. 'full ástæða', 'full réttindi', 'full eldmóðs'; removed +ao cf. 'full af'
 furðu		+lo
-gagn		+kk +kvk +hk +lo +so
+fyrirtaks   +kk +kvk +hk
+#gagn		+kk +kvk +hk +lo +so
 ger			+lo +so  					# Can attach to nouns, but uncommon.
 gjör		+lo +so 					# Can attach to nouns, but uncommon.
 hund		+lo
 hálf		+kk +kvk +hk +lo +so
 hámarks		+kk +kvk +hk
+heildar     +kk +kvk +hk
 #jafn		+kk +kvk +hk +lo +so
 lang		+kk +kvk +hk +lo +so +ao	# Common with adj. and adv. in est. - langfallegastur
 langtíma	+kk +kvk +hk
@@ -3533,22 +3597,23 @@ megin		+kk +kvk +hk
 # meðal		+kk +kvk +hk +lo			# Too common
 mis			+kk +kvk +hk +lo +so
 miðlungs	+kk +kvk +hk +lo
-næst		+lo							# Most common with adj. in est. - næstbestur
+#næst		+lo							Most common with adj. in est. - næstbestur
 #ný			-kk -kvk -hk +lo +so		
 of          +kk +kvk +hk -lo +so -ao    # Attached to nouns and verbs, free with adj. and adv.
 ofur        +kk +kvk +hk +lo +so +ao    # Attached to nouns and verbs, free with adj. and adv. but seems to have changed - ofursvalur
 ramm		+lo +ao
 sam         +kk +kvk +hk +lo +so +ao
 # saman		+kk +kvk +hk +lo +so		# Mostly with lh.þt. of verbs that take 'saman' as a particle. TODO too common
-# saman		+lo		                    # Allow 'samansúrraður', 'samansaumuð'
+#saman		+lo		                    Allow 'samansúrraður', 'samansaumuð'
+samtíma     +kk +kvk +hk
 skammtíma	+kk +kvk +hk
-# sér		+kk +kvk +hk				# TODO The pronoun is too common. Have to deal with these errors later.
+#sér		+kk +kvk +hk				The pronoun is too common. Have to deal with these errors later.
 sí          +kk +kvk +hk +lo +so
 tor         +kk +kvk +hk +lo +so +ao
 uppáhalds	+kk +kvk +hk
-van         +kk +kvk +hk +lo +so
+#van        +kk +kvk +hk +lo +so
 vara		+kk +kvk +hk
-# vel		+kk +kvk +hk -lo +so -ao	# TODO Too common as an independent word.
+# vel		+kk +kvk +hk -lo +so -ao	TODO Too common as an independent word.
 #ágætis		+kk +kvk +hk
 ó			+kk +kvk +hk +lo +so
 óhemju		+lo +so
@@ -3595,7 +3660,7 @@ Stríð 			# Kalda Stríðið
 Heimsveldi
 Bylting
 Uppreisn
-Meistaradeild
+meistaradeild
 Kreppa
 Endurreisn
 Jörð
@@ -3670,7 +3735,7 @@ Ferðamála-, iðnaðar- og nýsköpunarráðherra
 
 Forseti
 Saksóknari
-Ríkissaksóknari
+#Ríkissaksóknari
 Aðalsaksóknari
 Konungur
 Kanslari
@@ -3683,14 +3748,15 @@ Biskup
 Borgarstjóri
 Doktor
 Hæstaréttardómari
-Landlæknir
+#Landlæknir
 Prestur
 Prófessor
-Sýslumaður
-Lögreglustjóri
-Ríkislögreglustjóri
+#Sýslumaður
+#Lögreglustjóri
+#Ríkislögreglustjóri
 Alþingismaður
 Alþingiskona
+Heimsmeistari
 
 # Weekdays
 
@@ -3738,42 +3804,56 @@ Allsherjarþing
 Þjóðþing
 Fulltrúaþing
 Sambandslög
+Heimsmeistaramót
+Grunnskóli
+Höfuðborgarsvæði
 
 # !!! TODO: Expand following list of countries and related adjectives
 
 ísland
 íslendingur
 Íslenskur
+Íslenska
 danmörk
 dani
 Danskur
+Danska
 noregur
 norðmaður
 Norskur
+Norska
 svíþjóð
 svíi
 Sænskur
+Sænska
 finnland
 finni
 Finnskur
+Finnska
 kína
 kínverji
 Kínverskur
+Kínverska
 rússland
 rússi
 Rússneskur
+Rússneska
 færeyjar
 færeyingur
 Færeyskur
+Færeyska
 grænland
 grænlendingur
 Grænlenskur
+Grænlenska
 frakkland
 # frakki
 Franskur
+Franska
 þýskaland
 þjóðverji
 Þýskur
+Þýska
 bretland
 breti
 Breskur
@@ -3783,27 +3863,36 @@ Bandarískur
 holland
 hollendingur
 Hollenskur
+Hollenska
 eistland
 eisti
 Eistneskur
+Eistneska
 lettland
 letti
 Lettneskur
+Lettneska
 litháen
 lithái
 Litháenskur
+Litháenska
+Litháískur   # Error, should be litháenskur
+Litháíska
 kanada
 kanadamaður
 Kanadískur
 spánn
 spánverji
 Spænskur
+Spænska
 japan
 japani
 Japanskur
+Japanska
 arabía
 arabi
 Arabískur
+Arabíska
 filippseyjar
 filippseyingur
 Filippseyskur
@@ -3816,18 +3905,23 @@ Filippseyskur
 belgía
 # belgi 	#mynd af sögninni 'belgja'
 Belgískur
+Belgíska
 ítalía
 ítali
 Ítalskur
+Ítalska
 írland
 íri
 Írskur
+Írska
 skotland
 # skoti
 Skoskur
+Skoska
 portúgal
 portúgali
 Portúgalskur
+Portúgalska
 sviss
 svisslendingur
 Svissneskur
@@ -3837,24 +3931,31 @@ Austurrískur
 grikkland
 # grikki
 Grískur
+Gríska
 pólland
 póllendingur
 Pólskur
+Pólska
 tékkland
 # tékki
 Tékkneskur
+Tékkneska
 tyrkland
 tyrki
 Tyrkneskur
+Tyrkneska
 króatía
 króati
 Króatískur
+Króatíska
 ungverjaland
 ungverji
 Ungverskur
+Ungverska
 slóvakía
 slóvaki
 Slóvakískur
+Slóvakíska
 mexíkó
 mexíkói
 Mexíkóskur
@@ -3866,25 +3967,29 @@ brasilíumaður
 Brasilískur
 indland
 indverji
-Indverskur
+#Indverska
 taíland
 taílendingur
 Taílenskur
+Taílenska
 pakistan
 pakistani
 Pakistanskur
 víetnam
 víetnami
 Víetnamskur
+#Víetnamska
 mongólía
 mongólíumaður
 Mongólskur
 indónesía
 indónesi
 Indónesískur
+#Indónesíska
 kórea
 kóreumaður
 Kóreskur
+Kóreska
 norður-kórea 		#verður að Norður-kórea
 norður-kóreumaður	#verður að Norður-kóreumaður
 Norðurkóreskur
@@ -3909,6 +4014,14 @@ rómverji
 Rómverskur
 germani
 Germanskur
+Germanska
+sýrland
+sýrlendingur
+Sýrlenskur
+Íslamskur
+ameríka
+Amerískur
+Afrísk-amerískur
 
 austfirðir
 austurland
@@ -4152,6 +4265,69 @@ Svikahrappur
 Þyrnirósarsvefn
 Ökuþór
 
+# Other terms
+
+
+Alþjóðabraut
+Borgaryfirvöld
+Bossa
+Egypskur
+Enska
+Fjármálaverkfræði
+Flugstjórn
+Gleði
+Gotneskur
+Hamingja
+#Hr.
+#Háskóli
+#Imam
+#Indie
+Indíáni
+Internet
+Kaldur
+Karate
+Kaþólskur
+Konungsríki
+#Kristinn		# Also name!
+Landsfundur
+Landsþing
+Leiðtogi
+Ljósmóðir
+Líbýskur
+Lóuþræll
+Löggjafarvald
+Lögregla
+Lútherstrú
+Lýðveldi
+Markaðsstjóri
+Musterisriddari
+Málabraut
+Múmínálfur
+Nasisti
+Neyðarbraut
+Páskauppreisn
+Pönk
+Rapp
+Rauðbrystingur
+Reggí
+Ritstjóri
+Rómversk-kaþólskur
+Salsa
+Samveldi
+Skuldabréf
+Spítali
+#Sr.
+Strumpur
+#Sádí-arabískur
+Sérsveit
+Sómalska
+sómalíumaður
+Verslunarpróf
+Vistfræðikenning
+Áramótaskaup
+Öldungakirkja
+Þjóðfræði
+Þrælastríð
 
 [taboo_words]
 
