Lots of type annotations; fixes in capitalization

--- a/src/reynir_correct/config/GreynirCorrect.conf
+++ b/src/reynir_correct/config/GreynirCorrect.conf
@@ -385,12 +385,21 @@
 "Búrkíníbannið", "Búrkiníbannið"
 "búrkíníið", "búrkiníið"
 "búrkíníum", "búrkiníum"
+"búrmísk", "mjanmörsk"
 "búrmíska", "mjanmarska"
+"búrmískri", "mjanmarskri"
+"búrmískrar", "mjanmarskrar"
 "búrmíski", "mjanmarski"
 "búrmísku", "mjanmörsku"
+"búrmískur", "mjanmarskur"
+"búrmískan", "mjanmarskan"
+"búrmískum", "mjanmörskum"
+"búrmísks", "mjanmarsks"
 "Búsáhaldabyltingi", "Búsáhaldabyltingin"
 "Byrkir", "Birkir"
 "byrunarliðinu", "byrjunarliðinu"
+"bæjir", "bæir"
+"bæji", "bæi"
 "ðað", "að"
 "dæmsi", "dæmis"
 "dagins", "dagsins"
@@ -4567,6 +4576,7 @@ við líði                    	$error(YI, við lýði)
 þessi aðilar                    $error(WRONG_FORM, þessir aðilar)
 þíðir ekkert að					$error(YI, þýðir ekkert að)
 þýða í ísinn					$error(YI, þíða í ísinn)
+þessar stundirnar               $error(WRONG_NUMBER, þessa stundina)
 
 # Include WrongWords.conf file
 
