--- a/src/reynir_correct/config/TabooWords.conf
+++ b/src/reynir_correct/config/TabooWords.conf
@@ -5,40 +5,53 @@
 
 # This file is included in GreynirCorrect.conf
 
-# The format is as follows, in whitespace-separated columns within each line:
-
-# 1) Taboo word + '_' + category
-# 2) Optional replacement word + '_' + category.
-#    There can be multiple replacement words,
-#    separated by tight forward slashes '/'.
-# 3) Optional explanatory comment, enclosed in double quotes.
-
-# Note that lines can be continued by ending them with a backslash '\',
-# which is especially useful for long explanatory comments.
-
-pussa_kvk				píka_kvk
+pussa_kvk				píka_kvk					"Orðið er stundum notað yfir kynfæri kvenna og er óviðeigandi. \
+ 													 Það er líka notað sem meiðyrði yfir konur."
 tussa_kvk				píka_kvk
 kunta_kvk				píka_kvk
 tilli_kk				limur_kk
 hommatittur_kk			hommi_kk
 faggi_kk				hommi_kk
 lessa_kvk				lesbía_kvk
-negri_kk				blökkumaður_kk
-halanegri_kk			blökkumaður_kk
-surtur_kk				blökkumaður_kk
-blámaður_kk			    blökkumaður_kk
+negri_kk				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													 fólki sem er dökkt á hörund."
+surtur_kk				blökkumaður_kk				"Orðið er gildishlaðið kynþáttaheiti sem er meiðandi gagnvart fólki sem \
+													 er dökkt á hörund."
+blámaður_kk			    blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													 fólki sem er dökkt á hörund."
+afríkunegri_kk			blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+ 													 fólki sem er dökkt á hörund."
+niggari					blökkumaður_kk				"Orðið er gildishlaðið kynþáttaheiti sem er meiðandi gagnvart fólki sem \
+													 er dökkt á hörund"
+svertingi				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													 fólki sem er dökkt á hörund."
+negríti					blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													 fólki sem er dökkt á hörund."
+halanegri				blökkumaður_kk				"Orðið er úrelt og gildishlaðið kynþáttaheiti sem er meiðandi gagnvart \
+													 fólki sem er dökkt á hörund."
+júði_kk				    gyðingur_kk         		"Sá sem aðhyllist \
+                                           			gyðingdóm er 'gyðingur'."
+múhameðstrú_kvk			íslam_hk            		"Rétt heiti \
+                                           			 trúarbragðanna er 'íslam'."
+múhameðstrúarmaður_kk	múslími_kk          		"Sá sem aðhyllist íslam er 'múslími'."
+afhomma_so                                  		"Sögnin 'afhomma' getur verið meiðandi \
+                                           			 þar sem hún gefur í skyn að samkynhneigð sé \
+                                           			 eiginleiki sem unnt og/eða æskilegt \
+                                           			 sé að fjarlægja."
+hjúkka_kvk				hjúkrunafræðingur_kk		"Orðið 'hjúkka' þykir ýta undir kynjaðar staðalmyndir og gefur í skyn \	
+													 að aðeins konur sinni starfinu."
+hjúkrunarkona_kvk		hjúkrunarfræðingur_kk		"Orðið 'hjúkrunarkona' þykir ýta undir kynjaðar staðalmyndir og gefur í skyn \
+ 													 að aðeins konur sinni starfinu."
+skúringakerling_kvk		ræstitæknir_kk				"Orðið 'skúringakerling' þykir ýta undir kynjaðar staðalmyndir og gefur í \
+ 													 skyn að aðeins konur sinni starfinu. Auk þess er orðið 'kerling' stundum \
+                                                     notað í niðrandi merkingu um konur."
+skúringakona_kvk		ræstitæknir_kk				"Orðið 'skúringakona' þykir ýta undir kynjaðar staðalmyndir og gefur í \
+													 skyn að aðeins konur sinni starfinu."
+atvinnuleysingi_kk									"Orðið 'atvinnuleysingi' getur verið meiðandi fyrir fólk sem er atvinnulaust \
+													 þar sem.... XXXXXXXXXXXXXXX"	
+fóstureyðing_kvk		þungunarrof_hk				"Orðið 'fóstureyðing' þykir gildishlaðið og er úrelt. Í dag þykir betra að \
+													 nota orðin 'þungunarrof' eða 'meðgöngurof'."
+Wuhan-veira				kórónuveira_kvk				"Orðið 'Wuhan-veira' er óviðeigandi þar sem það bendlar kórónuveiruna \
+													 covid-19 við ákveðinn stað og þjóð. Það getur verið meiðandi og haft slæmar \
+                                                     afleiðingar gagnvart þjóðinni og fólki af svipuðum þjóðernum."
 
-júði_kk				    gyðingur_kk         "Sá sem aðhyllist \
-                                            gyðingdóm er 'gyðingur'."
-
-múhameðstrú_kvk			íslam_hk            "Rétt heiti \
-                                            trúarbragðanna er 'íslam'."
-
-múhameðstrúarmaður_kk	múslími_kk          "Sá sem aðhyllist íslam er 'múslími'."
-
-fóstureyðing_kvk        þungunarrof_hk/meðgöngurof_hk
-
-afhomma_so                                  "Sögnin 'afhomma' getur verið meiðandi \
-                                            þar sem hún gefur í skyn að samkynhneigð sé \
-                                            eiginleiki sem unnt og/eða æskilegt \
-                                            sé að fjarlægja."
